Fixed FireFox (Win10 and Ubuntu) layout issue: Right side of form was off the page.

--- a/public/extensions/chrome/popup.css
+++ b/public/extensions/chrome/popup.css
@@ -62,7 +62,7 @@ a:hover {
 .div-left,
 .div-right {
   display: inline-block;
-  width: 58%;
+  width: 55%;
 }
 .div-right {
   width: 38%;
